# math

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-test.yml  build-test-deploy.yml  develop-build_test_deploy.yml  topics-build_test.yml
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
conan/workspaces/: linux_complete.yml
src/: CMakeLists.txt
src/apps/Tests/: CMakeLists.txt
src/apps/tests/tests/: Angle.cpp  Base.cpp  Bezier_tests.cpp  Box.cpp  Box_tests.cpp  CMakeLists.txt  Canonical_tests.cpp  CardinalCubic_tests.cpp  Color_tests.cpp  Constexpr_tests.cpp  CustomCatchMatchers.h  EqualityDanger_tests.cpp  EulerAngles_tests.cpp  Homogeneous_tests.cpp  Interpolation_tests.cpp  LinearMatrix_tests.cpp  Matrix.cpp  ParameterAnimation_tests.cpp  Quaternion_tests.cpp  Rectangle.cpp  Spherical_tests.cpp  StructuredBindings_tests.cpp  Traits.cpp  TransformNormal_tests.cpp  Transformations_tests.cpp  Utilities_tests.cpp  Vector.cpp  VectorSwizzling_tests.cpp  operation_detectors.h
src/libs/math/math/: Angle.h  Barycentric.h  Base.h  Box.h  CMakeFinds.cmake.in  CMakeLists.txt  Canonical.h  Clamped.h  Color.h  Constants.h  EulerAngles.h  Homogeneous-impl.h  Homogeneous.h  Interpolation.h  LinearMatrix.h  Matrix-impl.h  Matrix.h  MatrixBase-impl.h  MatrixBase.h  MatrixTraits.h  Quaternion-impl.h  Quaternion.h  Rectangle.h  Spherical.h  StructuredBindings.h  Transformations-impl.h  Transformations.h  Utilities.h  Vector-impl.h  Vector.h  VectorUtilities.h  commons.h
src/libs/math/math/Curves/: Bezier.h  CardinalCubic.h  CurveBase.h
src/libs/math/math/Interpolation/: Interpolation.h  ParameterAnimation.h  ParameterAnimation.md  QuaternionInterpolation.h
